# serveless-test

./: .pre-commit-config.yaml  Dockerfile  pyproject.toml  worker-config.json
.github/: tests.json
.github/workflows/: CD-docker_dev.yml  CI-test_handler.yml  build-test-release.yml
builder/: requirements.txt
src/: handler.py  timestep_distilled.py
src/utils/: logging_config.py  validation.py
tests/: __init__.py  test_handler.py
